--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="content">본문</string>
     <string name="titleEditText">제목을 입력하세요 :</string>
     <string name="bodyEditText">내용을 입력하세요 :</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
